# oci-chunker

./: Cargo.toml  Containerfile  action.yml
.github/workflows/: build.yml
src/: main.rs  util.rs
src/chunking/: cli.rs  mod.rs  ostreext.rs
src/pkgdb/: archlinux.rs  cli.rs  mod.rs  postprocessing.rs  rpm.rs
src/rpm_ostree/: cmdutils.rs  compose.rs  container.rs  containers_storage.rs  mod.rs
test/: archlinux-postprocessing.toml
