[package]
name = "oci-chunker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.10"
cap-std = "3.4.4"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
fn-error-context = "0.2.0"
libc = "0.2.174"
oci-spec = "0.8.1"
ostree-ext = { git = "https://github.com/containers/bootc", rev = "v1.4.0" }
rustix = "1.0.8"
serde = "1.0.219"
serde_json = "1.0.141"
tempfile = "3.20.0"
tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
